...
        app:layout_constraintGuide_end="?attr/actionBarSize" />

    <cq.siddharth_bhat.photo_editor_clearquote.PhotoEditorView
        android:id="@+id/photoEditorView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/rvConstraintTools"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:photo_src="@drawable/blank_image" />

    <ImageView
...
        android:src="@drawable/ic_save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline" />

    <ImageView
        android:id="@+id/imgShare"
        android:layout_width="@dimen/top_tool_icon_width"
        android:layout_height="wrap_content"
        android:background="@color/semi_black_transparent"
        android:padding="8dp"
        android:src="@drawable/ic_share"
        app:layout_constraintBottom_toBottomOf="@+id/photoEditorView"
...
